package in.ac.vitap.cse1005.railmadad.domain;

public enum MediaType {
  IMAGE,
  VIDEO,
  AUDIO,
  TEXT
}
