package in.ac.vitap.cse1005.railmadad.domain.enums;

/**
 * Represents the role of a user in the system.
 *
 * <p>This enum is used to categorize different roles that a user can have in the system.
 */
public enum UserRole {
  /** Represents a customer role. */
  CUSTOMER,

  /** Represents an officer role. */
  OFFICER
}
